fix: github action

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,6 +19,17 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
+    - name: Cache node_modules
+      uses: actions/cache@v2
+      with:
+        path: node_modules
+        key: node_modules-${{ hashFiles('**/yarn.lock') }}
+        restore-keys: |
+          node_modules-
+
+    - name: Install
+      run: yarn --frozen-lockfile
+
     - name: Release
       run: yarn release
 
