--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^2.17.0",
     "@typescript-eslint/parser": "^2.17.0",
+    "eslint": "^7.12.1",
     "eslint-config-prettier": "^6.13.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.22.1",
@@ -29,7 +30,8 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.21.4",
     "eslint-plugin-standard": "^4.0.1",
-    "prettier": "^2.1.2"
+    "prettier": "^2.1.2",
+    "typescript": "^4.0.5"
   },
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
@@ -44,9 +46,6 @@
     "cz-emoji": "^1.2.2",
     "husky": "^4.3.0",
     "semantic-release": "^17.2.2"
-  },
-  "peerDependencies": {
-    "eslint": "^7.3.1"
   },
   "description": "eslint configuration with typescript, react and prettier",
   "config": {
