--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "@monx/eslint-config-next",
   "version": "1.0.3",
-  "main": "index.js",
+  "main": "src/config.js",
   "scripts": {
-    "husky": "husky",
     "commit": "git-cz",
     "release": "semantic-release"
   },
@@ -34,23 +33,8 @@
     "typescript": "^4.0.5"
   },
   "devDependencies": {
-    "@commitlint/cli": "^11.0.0",
-    "@commitlint/config-conventional": "^11.0.0",
-    "@semantic-release/changelog": "^5.0.1",
-    "@semantic-release/commit-analyzer": "^8.0.1",
-    "@semantic-release/git": "^9.0.0",
-    "@semantic-release/github": "^7.1.1",
-    "@semantic-release/npm": "^7.0.6",
-    "@semantic-release/release-notes-generator": "^9.0.1",
-    "commitizen": "^4.2.2",
-    "cz-emoji": "^1.2.2",
-    "husky": "^4.3.0",
-    "semantic-release": "^17.2.2"
+    "@monx/versioning": "^1.0.1",
+    "husky": "^4.3.0"
   },
-  "description": "eslint configuration with typescript, react and prettier",
-  "config": {
-    "commitizen": {
-      "path": "cz-conventional-changelog"
-    }
-  }
+  "description": "eslint configuration with typescript, react and prettier"
 }
